# pico_hour

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  pico_sdk_import.cmake  ws2812.pio
docker/: build.sh
include/: accel.h  config.h  config.local.h.example  http_server.h  lwipopts.h  lwipopts_examples_common.h  ws2812_driver.h
src/: accel_mpu6050.c  http_server.c  main.c  ws2812_pio.c
